# cheap-llm

./: .coverage  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  cheap_bench.py  cheap_llm.py  pyproject.toml
.github/workflows/: ci.yml
cheap_bench/: __init__.py  __main__.py  calls.py  candidates.py  cli.py  report.py  runner.py  scoring.py  tasks.py
cheap_llm/: __init__.py  __main__.py  cache.py  cascade.py  cli.py  contract.py  scrub.py  transport.py  validation.py
cheap_llm/transport/: __init__.py  calls.py  constants.py  httpio.py  pricing.py  providers.py
docs/plans/: 2026-07-12-001-fix-contract-cache-reliability-plan.md  2026-07-15-001-provider-routing-subscription-ecosystem-audit-plan.md
tests/: _checks_cascade.py  _checks_cli.py  _checks_cost.py  _checks_e2e.py  _checks_live.py  _checks_liveapi.py  _checks_local.py  _checks_pure.py  _checks_refactor.py  _checks_regression.py  _checks_robustness.py  _checks_scrub.py  _livetestlib.py  _testlib.py  test_cheap_llm.py  test_cheap_llm_live.py  test_contract.py  test_shim.py
