[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cheap-llm"
version = "1.1.2"
description = "Unified cheap-LLM cascade client for preprocessor slots. T1 local (Ollama) → T2 cloud (ling/gemini/gpt-nano) with cross-provider failover, secret scrub, JSON contract, and a versioned public API (SemVer + require() gate) for decoupled ecosystem consumers. Graduated from ~/.claude/scripts/cheap_llm.py."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "heldigard" }]
keywords = ["claude-code", "llm", "cascade", "cheap", "ollama", "openrouter", "preprocessor"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
cheap-llm = "cheap_llm:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_contract.py"]
pythonpath = ["."]
addopts = "-q"

[tool.pyright]
exclude = [
    ".venv",
    "tests/test_cheap_llm.py",
    "tests/test_cheap_llm_live.py",
    "tests/test_shim.py",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
