[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cheap-llm"
version = "1.3.1"
description = "Unified cheap-LLM cascade client for preprocessor slots. T1 local (Ollama) → T2 cloud (DeepSeek/Gemini/Ling/GPT Nano) with cross-provider failover, secret scrub, JSON contract, and a versioned public API (SemVer + require() gate) for decoupled ecosystem consumers. Graduated from ~/.claude/scripts/cheap_llm.py."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "heldigard" }]
keywords = ["claude-code", "llm", "cascade", "cheap", "ollama", "openrouter", "preprocessor"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
cheap-llm = "cheap_llm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_contract.py", "test_shim.py"]
pythonpath = ["."]
addopts = "-q"

[tool.pyright]
exclude = [
    ".venv",
    "tests/_checks_*.py",
    "tests/_livetestlib.py",
    "tests/_testlib.py",
    "tests/test_cheap_llm.py",
    "tests/test_cheap_llm_live.py",
    "tests/test_shim.py",
]

[tool.mypy]
# Mirrors the cli-orchestration quality bar: cheap_llm package is type-clean
# (PASSES locally). The behavioral tests use dynamic stubs (Any-shaped return
# dicts) so they stay outside mypy's strict path. cache.py / probe additions
# stay tight; ignore_missing_imports is set for any future third-party
# integration without forcing changes today.
python_version = "3.11"
files = ["cheap_llm"]
ignore_missing_imports = true
warn_unused_ignores = false
# contract surface stays tight; internal helpers may stay Any-shaped.
disallow_untyped_defs = false
disallow_any_explicit = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports internal symbols for backward compat (tests, shim, consumers)
"cheap_llm/__init__.py" = ["F401"]
# Test harness split: _checks_* run top-level via `from _testlib import *`
# (verbatim bodies); F403/F405 are inherent to that pattern, F401 covers
# side-effect imports + re-exported stdlib modules in _testlib.
"tests/_testlib.py" = ["F401", "F403", "F405"]
"tests/_livetestlib.py" = ["F401", "F403", "F405"]
"tests/_checks_*.py" = ["F401", "F403", "F405"]
"tests/test_cheap_llm.py" = ["F401", "I001"]  # import order = section run order, not alphabetical
"tests/test_cheap_llm_live.py" = ["F401", "I001"]  # ditto
